src/VotesRoot.css
.container {
  display: grid;
  /* grid-template-columns: repeat(11, [col-start] 1fr) 200px; */
  grid-template-columns: 100vw;
  grid-template-rows: 56px minmax(0, 1fr);
}

@media only screen and (min-width: 900px) {
  .container {
    height: 100vh;
  }
}

.header {
  grid-column: 1;
  background-color: black;
  position: sticky;
  top: 0;
  padding: 10px;
  color: #ffffff;
  z-index: 999;
  font-size: 18px;
  line-height: 1;
  /* display: inline; */
}

.header img, .header svg {
  display: inline;
}


.headerLogo {
  position: relative;
  top: -3px;
  padding-right: 10px;
}

.headerTextVisual {
  font-size: 16px;
  text-transform: uppercase;
  font-weight: bolder;
}

.pageGrid {
  display: grid;
  /* grid-template-columns: repeat(11, [col-start] 1fr) 200px; */
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.one {
  min-height: 60vh;
}

.two {
  padding: 5px 15px;
}

#regionSummaryName {
  scroll-margin-top: 60px;
}

@media only screen and (min-width: 900px) {
  .one {
    grid-column: span 2;
  }
  .two {
    grid-column: span 1;
    overflow: scroll;
  }

  #regionSummaryName {
    scroll-margin-top: 0px;
  }
}

.full {
  grid-column: span 10;
  overflow: scroll;
}

